# parrot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  story.yml  user_story.md
.github/workflows/: build.yml  bump.yml  ci_workflow.yml  deploy.yml  docker-build.yml  docker-publish.yml  docker.yml  lint.yml  main.yml
src/: client.rs  connection.rs  errors.rs  guild.rs  lib.rs  main.rs  messaging.rs  settings.rs  strings.rs  util.rs  utils.rs
src/commands/: allow.rs  autopause.rs  clear.rs  explain.rs  forceskip.rs  language.rs  leave.rs  manage_sources.rs  mod.rs  now_playing.rs  pause.rs  play.rs  playtop.rs  prefix.rs  queue.rs  remove.rs  repeat.rs  resume.rs  seek.rs  shuffle.rs  skip.rs  stop.rs  summon.rs  version.rs  voteskip.rs
src/commands/genius/: explain.rs  lyrics.rs  mod.rs
src/events/: idle_handler.rs  idle_notifier.rs  mod.rs  modify_queue_handler.rs  serenity_handler.rs  track_end_handler.rs
src/guild/: cache.rs  mod.rs  settings.rs
src/handlers/: idle.rs  mod.rs  serenity.rs  track_end.rs
src/messaging/: interaction.rs  locale.rs  message.rs  messages.rs  mod.rs
src/sources/: ffmpeg.rs  file.rs  mod.rs  spotify.rs  youtube.rs
src/test/: errors.rs  utils.rs
src/tests/: utils.rs
translations/: pirate.json  pt-br.json  pt-pt.json
