[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2018"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
rspotify = "0.12.0"
serde_json = "1.0.79"
url = "2.3.1"
serde = "1.0.152"

[dependencies.songbird]
version = "0.3.2"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
  "voice",
]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]
