[package]
name = "parrot"
version = "1.6.0"
authors = ["aquelemiguel"]
edition = "2021"
rust-version = "1.83"
description = "A Discord music bot built in Rust"
repository = "https://github.com/aquelemiguel/parrot"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
reqwest = "0.12"
rspotify = "0.13"
serde_json = "1.0.79"
url = "2.3.1"
serde = "1.0.152"

[dependencies.songbird]
version = "0.5"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
  "cache",
  "collector",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "voice",
]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]
